--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mqtt-client:
     container_name: mqtt-client
+    image: mqtt-client
     build: .
     networks:
       - global-network
